--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "express": "^4.15.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "live-server": "^1.2.0",
+    "node-sass": "^4.5.2",
+    "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.2",
+    "surge": "^0.19.0"
   }
 }
